--- a/gif.html
+++ b/gif.html
@@ -1,15 +1,12 @@
-<html>
   <head>
     <meta http-equiv="Content-Type" content="image/gif">
   </head>
-  <body>
-    <div style="position: relative; display: inline-block;">
-      <img src="https://totallylost-helpme.github.io/aigril2.png" 
-           alt="Base Image" 
-           style="width: 300px; height: auto;">
-      <img src="https://bit.ly/4aoMbTQ" 
-           alt="Overlay Image" 
-           style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100px; height: auto;">
-    </div>
-  </body>
-</html>
+<div style="position: relative; display: inline-block;">
+  <img src="https://raw.githubusercontent.com/totallylost-helpme/totallylost-helpme.github.io/refs/heads/main/aigril2.png" 
+       alt="Base Image" 
+       style="width: 300px; height: auto;">
+  <img src="https://bit.ly/4aoMbTQ" 
+       alt="Overlay Image" 
+       style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 100px; height: auto;">
+</div>
+
