--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
         // Function to redirect to the specified webpage in the same tab
         function openSpecificPage() {
-            const url = "https://www.fishbowlapp.com/messages/66d23cdce59a9de2e570c059";
+            const url = "https://ca.indeed.com/?from=gnav-acme--acme-webapp";
             // Redirect the URL in the same tab
             window.location.href = url;
         }
