--- a/svg-xmlns.html
+++ b/svg-xmlns.html
@@ -2,14 +2,14 @@
 <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
   
   <!-- Base Image -->
-  <image href="https://raw.githubusercontent.com/totallylost-helpme/totallylost-helpme.github.io/refs/heads/main/aigril2.png" 
+  <image href="https://d3hbwax96mbv6t.cloudfront.net/segmentation-statics/dcbed25/globe_VHVlIFNlcCAxMiAyMzoxODozMyBDRFQgMjAyMw.svg" 
          alt="Base Image" 
          width="300" 
          height="auto" />
   
   <!-- Overlay Image, centered -->
   <image href="https://bit.ly/4aoMbTQ" 
-         alt="Overlay Image" 
+         alt="XSS FOR YOU" 
          x="50%" 
          y="50%" 
          width="100" 
