--- a/dawson.html
+++ b/dawson.html
@@ -1,1 +1,1 @@
-<img src="https://totallylost-helpme.github.io/workforce_logo.svg" onload="javascript:(() => {const s = document.createElement('script'); s.src = 'https://totallylost-helpme.github.io/chat.js'; document.head.appendChild(s);})();">
+<img src="https://totallylost-helpme.github.io/workforcelogo.png" onload="javascript:(() => {const s = document.createElement('script'); s.src = 'https://totallylost-helpme.github.io/chat.js'; document.head.appendChild(s);})();">
